objects/SalesOrgSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>NewRateUSDDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewRateUSDDisplay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Org Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Value__c</fullName>
        <label>VAT Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SalesOrgSettings</label>
    <pluralLabel>SalesOrgSettings</pluralLabel>
</CustomObject>